--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corso-node",
+  "name": "aspNode",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.0"
   },
   "devDependencies": {
