--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "aspNode",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "npx concurrently \"tsc --watch\" \"nodemon dist/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/node": "^22.7.4",
     "nodemon": "^3.1.7"
   }
 }
