--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.21.0",
+    "mysql2": "^3.11.4",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
